<resources>
    <string name="app_name">LifeApp</string>
    <string name="life">LIFE</string>
    <string name="enter">Enter</string>
    <string name="datas">Datas</string>
    <string name="perso">Perso</string>
    <string name="results">Results</string>
    <string name="work">Work</string>
    <string name="Return">return</string>
    <string name="Generate">Generate</string>
    <string name="another_one">Another one !</string>
    <string name="focus_time">Focus time</string>
    <string name="short_pause_time">Short pause time</string>
    <string name="long_pause_time">Long pause time</string>
    <string name="save_settings">Save settings</string>
    <string-array name="Options_focus">
        <item name = "3">f : 20 min</item>
        <item name = "4">f : 25 min</item>
        <item name = "5">f : 30 min</item>
    </string-array>
    <string-array name="Options_short">
        <item name = "1">sp : 10 min</item>
        <item name = "2">sp : 15 min</item>
        <item name = "3">sp : 20 min</item>
    </string-array>
    <string-array name="Options_long">
        <item name = "3">lp : 20 min</item>
        <item name = "4">lp : 25 min</item>
        <item name = "5">lp : 30 min</item>
    </string-array>
</resources>